--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
 .App {
     margin: 1rem;
     font-family: Arial, Helvetica, sans-serif;
-  }
+    width: 100%;
+    height: 100%;
+}
+
+.container{
+    width: 80%;
+    height: 400px;
+    margin: 0 auto;
+}
+
+@media(min-width: 1000px){
+    .container{
+        max-width: 800px;
+        margin: 10px auto;
+        height: 400px;
+    }
+}
